--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,7 +5,7 @@
     <%= stylesheet_link_tag    "application", media: "all" %>
     <%= javascript_include_tag "application" %>
     <%= csrf_meta_tags %>
-    <%= render 'layouts/shim' %>    
+    <%= render 'layouts/shim' %>
   </head>
   <body>
     <%= render 'layouts/header' %>
@@ -16,6 +16,15 @@
       <%= yield %>
       <%= render 'layouts/footer' %>
       <%= debug(params) if Rails.env.development? %>
+      <% if Rails.env.development? %>
+          <pre class='debug_dump'>
+            <% for header in request.env.select {|k,v| k.match("^HTTP.*")} %>
+<%=header[0].split('_',2)[1]%>:<%=header[1]%>
+          <% end %>
+</pre>
+      <% end %>
+
+
     </div>
   </body>
 </html>
